# dnt_ros_proxy

./: .gitignore  .gitmodules
src/dtn_proxy/: CMakeLists.txt  README.md  package.xml
src/dtn_proxy/config/: node0.toml
src/dtn_proxy/include/: common.hpp  configuration.hpp  configuration_reader.hpp  dtnd_client.hpp  logger.hpp  stats_recorder.hpp  ws_client.hpp  ws_datatypes.hpp
src/dtn_proxy/include/pipeline/: action_interface.hpp  combine_tf.hpp  combine_topics.hpp  expire_bundles.hpp  image_compression.hpp  image_decompression.hpp  image_processing.hpp  logging.hpp  lzmh_decoding.hpp  lzmh_encoding.hpp  modules.hpp  on_change.hpp  pipeline.hpp  rate_limit.hpp  split_tf.hpp  split_topics.hpp
src/dtn_proxy/include/ros/: dtn_msg_type.hpp  manager_base.hpp  ros_message.hpp  service_manager.hpp  topic_manager.hpp  transfer.hpp
src/dtn_proxy/launch/: default_launch.py
src/dtn_proxy/src/: configuration.cpp  configuration_reader.cpp  dtnProxy.cpp  dtnd_client.cpp  logger.cpp  stats_recorder.cpp  ws_client.cpp
src/dtn_proxy/src/pipeline/: combine_tf.cpp  combine_topics.cpp  expire_bundles.cpp  image_compression.cpp  image_decompression.cpp  image_processing.cpp  logging.cpp  lzmh.cpp  lzmh_decoding.cpp  lzmh_encoding.cpp  on_change.cpp  pipeline.cpp  rate_limit.cpp  split_tf.cpp  split_topics.cpp
src/dtn_proxy/src/ros/: generic_service.cpp  manager_base.cpp  ros_message.cpp  service_manager.cpp  topic_manager.cpp  transfer.cpp
src/dtn_robot/: CMakeLists.txt  README.md  package.xml
src/dtn_robot/launch/: robot.launch.py
src/dtn_robot/src/: control_interface.cpp  dht_fake_sensor.cpp  image_publisher.cpp  other_sensors.cpp  status_publisher.cpp  temp_sensor.cpp
src/dtn_robot/srv/: FollowWaypoints.srv
src/dtn_robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/dtn_robot_interfaces/msg/: PointArray.msg
src/dtn_sim/: CMakeLists.txt  README.md  package.xml
src/dtn_sim/launch/: complete.launch.py  empty_world.launch.py  navigation2.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
src/dtn_sim/map/: empty_map.pgm  empty_map.yaml  tb_world.yaml
src/dtn_sim/models/turtlebot3_pi_camera_dtn/: model.config  model.sdf
src/dtn_sim/models/turtlebot3_pi_dtn/: model.config  model.sdf
src/dtn_sim/models/turtlebot3_waffle_pi/: model.sdf
src/dtn_sim/param/: pi_camera_dtn.yaml  pi_dtn.yaml  waffle_pi.yaml
src/dtn_sim/rviz/: dtn_sim_default.rviz  dtn_sim_waffle_pi.rviz
src/dtn_sim/scripts/: calcCoreStepFile.py  corePosNode.py  extractRobotMovement.py  imagePublisher.py  parseMap.py  playRosbag.py  recordTopicDelay.py  rewriteBag.py  sendWaypoints.py  waypoints.txt
src/dtn_sim/src/: control_interface.cpp
src/dtn_sim/urdf/: turtlebot3_pi_camera_dtn.urdf  turtlebot3_pi_dtn.urdf
src/dtn_sim/worlds/: RoboCup2019_final.world  waypoints.world
src/test/: CMakeLists.txt  package.xml
src/test/src/: add_two_ints.cpp
src/test_service/: CMakeLists.txt  README.md  package.xml
