<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dtn_robot</name>
  <version>1.0.0</version>
  <description>Generates Test data for a virtual robot</description>
  <maintainer email="17803954+Wollwolke@users.noreply.github.com">lars</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>radiation_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  
  <depend>dtn_robot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
